==> sa2006026/PID-control-with-LED-and-temperature/lib/TemperatureControl/Communication.cpp <==
/***************************************************************************//**
  *   @file   Communication.c
 *   @brief  Implementation of Communication Driver.
  *   @author DBogdan (dragos.bogdan@analog.com)
********************************************************************************
  * Copyright 2012(c) Analog Devices, Inc.
 *
 * All rights reserved.
 *
  * Redistribution and use in source and binary forms, with or without
 * modification,  are permitted provided that the following conditions are met:
 *  - Redistributions  of source code must retain the above copyright
 *    notice, this list of conditions  and the following disclaimer.
 *  - Redistributions in binary form must reproduce  the above copyright
 *    notice, this list of conditions and the following disclaimer  in
 *    the documentation and/or other materials provided with the
 *    distribution.
  *  - Neither the name of Analog Devices, Inc. nor the names of its
 *    contributors  may be used to endorse or promote products derived
 *    from this software without  specific prior written permission.
 *  - The use of this software may or may  not infringe the patent rights
 *    of one or more patent holders.  This license  does not release you
 *    from the requirement that you obtain separate licenses  from these
 *    patent holders to use this software.
 *  - Use of the software  either in source or binary form, must be run
 *    on or directly connected to  an Analog Devices Inc. component.
 *
 * THIS SOFTWARE IS PROVIDED BY ANALOG  DEVICES "AS IS" AND ANY EXPRESS OR
 * IMPLIED WARRANTIES, INCLUDING, BUT NOT  LIMITED TO, NON-INFRINGEMENT,
 * MERCHANTABILITY AND FITNESS FOR A PARTICULAR  PURPOSE ARE DISCLAIMED.
 * IN NO EVENT SHALL ANALOG DEVICES BE LIABLE FOR ANY  DIRECT, INDIRECT,
 * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES  (INCLUDING, BUT NOT
 * LIMITED TO, INTELLECTUAL PROPERTY RIGHTS, PROCUREMENT  OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS  INTERRUPTION) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,  STRICT LIABILITY,
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY  WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF  SUCH DAMAGE.
 *
********************************************************************************
  *   SVN Revision: 500
*******************************************************************************

********************************************************************************
  *   Modified and adapted for Arduino by Ph. Sonnet.  March 27, 2019, Version 1.1
*******************************************************************************/

/******************************************************************************/
/*  Include Files                                                              */
/******************************************************************************/
#include  "AD7793.h"
#include "Arduino.h"
#include "Communication.h"
#include  "SPI.h"

/***************************************************************************//**
  * @brief Initializes the SPI communication peripheral.
 *
 * @param lsbFirst  - Transfer format (0 or 1).
 *                   Example: 0x0 - MSB first.
  *                            0x1 - LSB first.
 * @param clockFreq - SPI clock  frequency (Hz).
 *                    Example: 1000 - SPI clock frequency is  1 kHz.
 * @param clockPol - SPI clock polarity (0 or 1).
 *                   Example:  0x0 - idle state for SPI clock is low.
 *	                          0x1 - idle  state for SPI clock is high.
 * @param clockPha - SPI clock phase (0 or 1).
  *                   Example: 0x0 - data is latched on the leading edge of SPI
  *                                  clock and data changes on trailing edge.
  *                            0x1 - data is latched on the trailing edge of SPI
  *                                  clock and data changes on the leading edge.
  *
 * @return 0 - Initialization failed, 1 - Initialization succeeded.
*******************************************************************************/

unsigned  char SPI_Init()
{	ADI_PART_CS_PIN_OUT;
	ADI_PART_CS_HIGH;
	GPIO1_PIN_IN;

	SPI.begin();  // configure the SPI port for your SPI device.
	SPI.beginTransaction(SPI_SETTINGS);  // implements the SPI communication settings you defined in Communication.h
    return(1);
}

/***************************************************************************//**
  * @brief Writes data to SPI.
 *
 * @param data - Write data buffer:
 *               - first byte is the chip select number;
 *               - from  the second byte onwards are located data bytes to write.
 * @param bytesNumber  - Number of bytes to write.
 *
 * @return Number of written bytes.
*******************************************************************************/
unsigned  char SPI_Write(unsigned char* data,
                        unsigned char bytesNumber)
{
	int  SCNumber = data[0];

	ADI_PART_CS_LOW;
	SPI.transfer(&data[1],bytesNumber);
	if  (SCNumber == 0x1) {
		ADI_PART_CS_HIGH;
		}
	return(bytesNumber);
}

/***************************************************************************//**
  * @brief Reads data from SPI.
 *
 * @param data - As an input parameter, data  represents the write buffer:
 *               - first byte is the chip select  number;
 *               - from the second byte onwards are located data bytes  to write.
 *               As an output parameter, data represents the read buffer:
  *               - from the first byte onwards are located the read data bytes.
  * @param bytesNumber - Number of bytes to write.
 *
 * @return Number of written  bytes.
*******************************************************************************/
unsigned  char SPI_Read(unsigned char* data,
                       unsigned char bytesNumber)
{  int i = 0;


    ADI_PART_CS_LOW;
    int SCNumber = data[0];
   for(i  = 1 ;i < bytesNumber + 1 ; i ++)
    {
		  data[i-1] = SPI.transfer(data[i]);
	}
    if (SCNumber == 0x1) {
		ADI_PART_CS_HIGH;
		}
 	return(bytesNumber);
	}
